--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'pub.devrel:easypermissions:2.0.1'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
 
 
 
